Answers to exercises

--- a/Day001_HelloWorld.ipynb
+++ b/Day001_HelloWorld.ipynb
@@ -59,6 +59,41 @@
     "print(3%4)\n",
     "print(3//4)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 3: Write strings on the python interactive shell. The strings are the following:\n",
+    "Your name;\n",
+    "Your family name;\n",
+    "Your country;\n",
+    "I am enjoying 30 days of python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rufai\n",
+      "Dikko\n",
+      "Nigeria\n",
+      "I am enjoying 30 days of python\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Rufai')\n",
+    "print('Dikko')\n",
+    "print('Nigeria')\n",
+    "print('I am enjoying 30 days of python')"
+   ]
   }
  ],
  "metadata": {
