Answers to exercises

--- a/Day001_HelloWorld.ipynb
+++ b/Day001_HelloWorld.ipynb
@@ -94,6 +94,125 @@
     "print('Nigeria')\n",
     "print('I am enjoying 30 days of python')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 4: Check the data types of the following data:\n",
+    "10;\n",
+    "9.8;\n",
+    "3.14;\n",
+    "4 - 4j;\n",
+    "['Asabeneh', 'Python', 'Finland'];\n",
+    "Your name;\n",
+    "Your family name;\n",
+    "Your country;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'float'>\n",
+      "<class 'complex'>\n",
+      "<class 'list'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(10))\n",
+    "print(type(9.8))\n",
+    "print(type(3.14))\n",
+    "print(type(4-4j))\n",
+    "print(type(['Asabeneh', 'Python', 'Finland']))\n",
+    "print(type('Rufai'))\n",
+    "print(type('Nigeria'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise: Level 3"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 1: Write an example for different Python data types such as Number(Integer, Float, Complex), String, Boolean, List, Tuple, Set and Dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'complex'>\n",
+      "<class 'str'>\n",
+      "<class 'list'>\n",
+      "<class 'dict'>\n",
+      "<class 'set'>\n",
+      "<class 'tuple'>\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(7))\n",
+    "print(type(77.7))\n",
+    "print(type(7j- 5))\n",
+    "print(type('Nasiru'))\n",
+    "print(type(['Ram', 'Plastic', 'Concrete']))\n",
+    "print(type({'First_name': 'Rufai'}))\n",
+    "print(type({9, 7, 4, 8, 7}))\n",
+    "print(type((\"curry\", \"spices\", \"garlic\")))\n",
+    "print(type(True))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 2: Find an Euclidian distance between (2, 3) and (10, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4620.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((((3 ** 2 - 2**2)**2) + ((10 ** 2 - 2**2)**2)) ** 1/2)"
+   ]
   }
  ],
  "metadata": {
