Answers to exercises

--- a/Day002_Variables.ipynb
+++ b/Day002_Variables.ipynb
@@ -26,11 +26,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Day 2:30 Days of python programming'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 'Day 2:30 Days of python programming'"
+    "'Day 2:30 Days of python programming'"
    ]
   }
  ],
