Answers to exercises

--- a/Day002_Variables.ipynb
+++ b/Day002_Variables.ipynb
@@ -43,6 +43,91 @@
    "source": [
     "'Day 2:30 Days of python programming'"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 3: Declare a first name variable and assign a value to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rufai\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name = \"Rufai\"\n",
+    "\n",
+    "print(first_name)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 4: Declare a last name variable and assign a value to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dikko\n"
+     ]
+    }
+   ],
+   "source": [
+    "last_name = \"Dikko\"\n",
+    "\n",
+    "print (last_name)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 5: Declare a full name variable and assign a value to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rufai Dikko\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_name = first_name + ' ' + last_name\n",
+    "\n",
+    "first_name = \"Rufai\"\n",
+    "last_name = \"Dikko\"\n",
+    "\n",
+    "print(full_name)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
