Answers to exercises

--- a/Day002_Variables.ipynb
+++ b/Day002_Variables.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -120,13 +120,229 @@
     }
    ],
    "source": [
-    "full_name = first_name + ' ' + last_name\n",
-    "\n",
     "first_name = \"Rufai\"\n",
     "last_name = \"Dikko\"\n",
     "\n",
+    "full_name = first_name + ' ' + last_name\n",
+    "\n",
     "print(full_name)\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 6: Declare a country variable and assign a value to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nigeria\n"
+     ]
+    }
+   ],
+   "source": [
+    "country_name = \"Nigeria\"\n",
+    "\n",
+    "print(country_name)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 7: Declare a city variable and assign a value to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kaduna\n"
+     ]
+    }
+   ],
+   "source": [
+    "city_name = \"Kaduna\"\n",
+    "\n",
+    "print(city_name)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 8: Declare an age variable and assign a value to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_age = 18\n",
+    "\n",
+    "print(my_age)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 9: Declare a year variable and assign a value to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022\n"
+     ]
+    }
+   ],
+   "source": [
+    "this_year = 2022\n",
+    "\n",
+    "print(this_year)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 10: Declare a variable is_married and assign a value to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "is_married =False\n",
+    "\n",
+    "print(is_married)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 11: Declare a variable is_true and assign a value to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "is_true = False\n",
+    "\n",
+    "print(is_true)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 12: Declare a variable is_light_on and assign a value to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "is_light_on = False\n",
+    "\n",
+    "print(is_light_on)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 13: Declare multiple variable on one line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rufai Dikko\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name, family_name = 'Rufai', 'Dikko'\n",
+    "\n",
+    "print(first_name + ' ' + family_name)"
    ]
   }
  ],
