--- a/Day002_Variables.ipynb
+++ b/Day002_Variables.ipynb
@@ -66,9 +66,7 @@
     }
    ],
    "source": [
-    "first_name = \"Rufai\"\n",
-    "\n",
-    "print(first_name)"
+    "first_name = \"Rufai\""
    ]
   },
   {
@@ -93,9 +91,7 @@
     }
    ],
    "source": [
-    "last_name = \"Dikko\"\n",
-    "\n",
-    "print (last_name)"
+    "last_name = \"Dikko\""
    ]
   },
   {
@@ -120,13 +116,7 @@
     }
    ],
    "source": [
-    "first_name = \"Rufai\"\n",
-    "last_name = \"Dikko\"\n",
-    "\n",
-    "full_name = first_name + ' ' + last_name\n",
-    "\n",
-    "print(full_name)\n",
-    "\n"
+    "full_name = first_name + ' ' + last_name"
    ]
   },
   {
@@ -151,9 +141,7 @@
     }
    ],
    "source": [
-    "country_name = \"Nigeria\"\n",
-    "\n",
-    "print(country_name)"
+    "country_name = \"Nigeria\""
    ]
   },
   {
@@ -178,9 +166,7 @@
     }
    ],
    "source": [
-    "city_name = \"Kaduna\"\n",
-    "\n",
-    "print(city_name)"
+    "city_name = \"Kaduna\""
    ]
   },
   {
@@ -205,9 +191,7 @@
     }
    ],
    "source": [
-    "my_age = 18\n",
-    "\n",
-    "print(my_age)"
+    "my_age = 18"
    ]
   },
   {
@@ -232,9 +216,7 @@
     }
    ],
    "source": [
-    "this_year = 2022\n",
-    "\n",
-    "print(this_year)"
+    "this_year = 2022"
    ]
   },
   {
@@ -259,9 +241,7 @@
     }
    ],
    "source": [
-    "is_married =False\n",
-    "\n",
-    "print(is_married)"
+    "is_married =False"
    ]
   },
   {
@@ -286,9 +266,7 @@
     }
    ],
    "source": [
-    "is_true = False\n",
-    "\n",
-    "print(is_true)"
+    "is_true = False"
    ]
   },
   {
@@ -313,9 +291,7 @@
     }
    ],
    "source": [
-    "is_light_on = False\n",
-    "\n",
-    "print(is_light_on)"
+    "is_light_on = False"
    ]
   },
   {
@@ -340,9 +316,212 @@
     }
    ],
    "source": [
-    "first_name, family_name = 'Rufai', 'Dikko'\n",
-    "\n",
-    "print(first_name + ' ' + family_name)"
+    "first_name, middle_name, family_name = 'Rufai', 'Ibrahim', 'Dikko'"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercises: Level 2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 1: Check the data type of all your variables using type() built-in function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'int'>\n",
+      "<class 'int'>\n",
+      "<class 'bool'>\n",
+      "<class 'bool'>\n",
+      "<class 'bool'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(first_name))\n",
+    "print(type(last_name))\n",
+    "print(type(full_name))\n",
+    "print(type(country_name))\n",
+    "print(type(city_name))\n",
+    "print(type(my_age))\n",
+    "print(type(this_year))\n",
+    "print(type(is_married))\n",
+    "print(type(is_true))\n",
+    "print(type(is_light_on))\n",
+    "print(type(family_name))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 2: Using the len() built-in function, find the length of your first name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(first_name))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 3: Compare the length of your first name and your last name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(first_name) > len(last_name))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 4: Declare 5 as num_one and 4 as num_two\n",
+    "i. Add num_one and num_two and assign the value to a variable total.\n",
+    "ii. Subtract num_two from num_one and assign the value to a variable diff..\n",
+    "iii. Multiply num_two and num_one and assign the value to a variable product.\n",
+    "iv. Divide num_one by num_two and assign the value to a variable division.\n",
+    "v. Use modulus division to find num_two divided by num_one and assign the value to a variable remainder.\n",
+    "vi. Calculate num_one to the power of num_two and assign the value to a variable exp.\n",
+    "vii. Find floor division of num_one by num_two and assign the value to a variable floor_division."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_one = 5\n",
+    "num_two = 4\n",
+    "total = num_one + num_two\n",
+    "diff = num_one - num_two\n",
+    "product = num_one * num_two\n",
+    "division = num_one / num_two\n",
+    "remainder = num_one % num_two\n",
+    "exp = num_one ** num_two\n",
+    "floor_division = num_one // num_two"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 5: The radius of a circle is 30 meters.\n",
+    "i. Calculate the area of a circle and assign the value to a variable name of area_of_circle.\n",
+    "ii. Calculate the circumference of a circle and assign the value to a variable name of circum_of_circle.\n",
+    "iii. Take radius as user input and calculate the area."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2826.0\n",
+      "188.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "radius = 30\n",
+    "area_of_circle = 3.14 * radius * radius\n",
+    "circumference_of_circle = 3.14 * 2 * radius\n",
+    "print(area_of_circle)\n",
+    "print(circumference_of_circle)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 6: Use the built-in input function to get first name, last name, country and age from a user and store the value to their corresponding variable names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_name = input('Enter first name:')\n",
+    "Last_name = input('Enter last name:')\n",
+    "country = input('Enter country:')\n",
+    "age = int(input('Enter age:'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 7: Run help('keywords') in Python shell or in your file to check for the Python reserved words or keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help('keywords')"
    ]
   }
  ],
