--- a/Day007_Sets.ipynb
+++ b/Day007_Sets.ipynb
@@ -150,10 +150,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "The built-in method, discard() in Python, removes the element from the set only if the element is present in the set. If the element is not present in the set, then no error or exception is raised and the original set is printed.\n",
+    "discard() in Python, removes the element from the set only if the element is present in the set. \n",
+    "If the element is not present in the set, then no error or exception is raised and the original set is printed.\n",
     "\n",
-    "\n",
-    "The built-in method, remove() in Python, removes the element from the set only if the element is present in the set, just as the discard() method does but If the element is not present in the set, then an error or exception is raised."
+    "remove() in Python removes the element from the set only if the element is present in the set, \n",
+    "just as the discard() method does but If the element is not present in the set, then an error or exception is raised."
    ]
   }
  ],
