Answers to exercises

--- a/Day007_Sets.ipynb
+++ b/Day007_Sets.ipynb
@@ -156,6 +156,251 @@
     "remove() in Python removes the element from the set only if the element is present in the set, \n",
     "just as the discard() method does but If the element is not present in the set, then an error or exception is raised."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercises: Level 2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 1: Join A and B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{19, 20, 22, 24, 25, 26, 27, 28}\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = {19, 22, 24, 20, 25, 26}\n",
+    "B = {19, 22, 20, 25, 26, 24, 28, 27}\n",
+    "print(A.union(B))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 2: Find A intersection B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{19, 20, 22, 24, 25, 26}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A.intersection(B))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 3: Is A subset of B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A.issubset(B))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 4: Are A and B disjoint sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A.isdisjoint(B))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 5: Join A with B and B with A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{19, 20, 22, 24, 25, 26, 27, 28}\n",
+      "{19, 20, 22, 24, 25, 26, 27, 28}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A.union(B))\n",
+    "print(B.union(A))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 6: What is the symmetric difference between A and B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{27, 28}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A.symmetric_difference(B))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercises: Level 3"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 1: Convert the ages to a set and compare the length of the list and the set, which one is bigger?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = [22, 19, 24, 25, 26, 24, 25, 24]\n",
+    "print(len(set(age)) < len(age))  # len of list is bigger"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 2: Explain the difference between the following data types: string, list, tuple and set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#List is a non-homogeneous data structure that stores the elements in single and multiple rows and columns.\n",
+    "#Tuple is also a non-homogeneous data structure that stores single and multiple rows and columns.\n",
+    "#Set is also a non-homogeneous data structure that stores values in a single row."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 3: I am a teacher and I love to inspire and teach people. How many unique words have been used in the sentence? Use the split methods and set to get the unique words."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'people.', 'I', 'to', 'a', 'and', 'love', 'teach', 'inspire', 'teacher', 'am'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence  = 'I am a teacher and I love to inspire and teach people.'\n",
+    "\n",
+    "split_sen = sentence.split(\" \")\n",
+    "\n",
+    "split_sen = set(split_sen)\n",
+    "print(split_sen)"
+   ]
   }
  ],
  "metadata": {
