Answers to exercises

--- a/Day009_Conditionals.ipynb
+++ b/Day009_Conditionals.ipynb
@@ -121,6 +121,208 @@
     "else:\n",
     "    print(\"Both numbers are equal\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercises: Level 2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 1: Write a code which gives grade to students according to theirs scores:\n",
+    "\n",
+    "80-100, A;\n",
+    "70-89, B;\n",
+    "60-69, C;\n",
+    "50-59, D;\n",
+    "0-49, F."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grade: A\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = int(input(\"Enter score: \"))\n",
+    "grades = {}\n",
+    "for i in range(80, 100):\n",
+    "    grades[i] = 'A'\n",
+    "for i in range(70, 89):\n",
+    "    grades[i] = 'B'\n",
+    "for i in range(60, 69):\n",
+    "    grades[i] = 'C'\n",
+    "for i in range(50, 59):\n",
+    "    grades[i] = 'D'\n",
+    "for i in range(0, 49):\n",
+    "    grades[i] = 'F'\n",
+    "\n",
+    "print(\"Grade:\", grades[score])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 2: Check if the season is Autumn, Winter, Spring or Summer. If the user input is: September, October or November, the season is Autumn. December, January or February, the season is Winter. March, April or May, the season is Spring June, July or August, the season is Summer\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spring\n"
+     ]
+    }
+   ],
+   "source": [
+    "month = input('Enter month: ').title()\n",
+    "if month in [\"September\", \"October\", \"November\"]:\n",
+    "    print(\"Autumn\")\n",
+    "if month in [\"December\", \"January\", \"February\"]:\n",
+    "    print(\"Winter\")\n",
+    "if month in [\"March\", \"April\", \"May\"]:\n",
+    "    print(\"Spring\")\n",
+    "else:\n",
+    "    print(\"Summer\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 3: The following list contains some fruits:\n",
+    "\n",
+    "fruits = ['banana', 'orange', 'mango', 'lemon']\n",
+    "\n",
+    "If a fruit doesn't exist in the list add the fruit to the list and print the modified list. If the fruit exists print('That fruit already exist in the list')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "['Cocunut', 'Tangerine', 'Cashew', 'Guava', 'Mango']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['Cocunut', 'Tangerine', 'Cashew', 'Guava']\n",
+    "fruit = input('Enter fruit: ')\n",
+    "print('That fruit already exists in the list' if fruit in fruits else fruits.append(fruit))\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercises: Level 3"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 4: Here we have a person dictionary. Feel free to modify it!\n",
+    "\n",
+    "        person={\n",
+    "    'first_name': 'Asabeneh',\n",
+    "    'last_name': 'Yetayeh',\n",
+    "    'age': 250,\n",
+    "    'country': 'Finland',\n",
+    "    'is_marred': True,\n",
+    "    'skills': ['JavaScript', 'React', 'Node', 'MongoDB', 'Python'],\n",
+    "    'address': {\n",
+    "        'street': 'Space street',\n",
+    "        'zipcode': '02210'\n",
+    "    }\n",
+    "    }\n",
+    "\n",
+    "\n",
+    " * Check if the person dictionary has skills key, if so print out the middle skill in the skills list.\n",
+    " * \n",
+    " * Check if the person dictionary has skills key, if so check if the person has 'Python' skill and print out the result.\n",
+    " * \n",
+    " * If a person skills has only JavaScript and React, print('He is a front end developer'), if the person skills has Node, Python, MongoDB, print('He is a backend developer'), if the person skills has React, Node and MongoDB, Print('He is a fullstack developer'), else print('unknown title') - for more accurate results more conditions can be nested!\n",
+    " * \n",
+    " * If the person is married and if he lives in Finland, print the information in the following format: Asabeneh Yetayeh lives in Finland. He is married."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node\n",
+      "True\n",
+      "Unknown Title\n",
+      "Rufai Dikko lives in Nigeria . S/he is not married\n"
+     ]
+    }
+   ],
+   "source": [
+    "person = {\n",
+    "    'first_name': 'Rufai',\n",
+    "    'last_name': 'Dikko',\n",
+    "    'age': 28,\n",
+    "    'country': 'Nigeria',\n",
+    "    'is_married': False,\n",
+    "    'skills': ['JavaScript', 'React', 'Node', 'MongoDB', 'Python'],\n",
+    "    'address': {\n",
+    "        'street': 'Space street',\n",
+    "        'zipcode': '02210'\n",
+    "    }\n",
+    "}\n",
+    "if person['skills']:\n",
+    "    print(person['skills'][len(person['skills']) // 2])\n",
+    "    print(\"Python\" in person['skills'])\n",
+    "    if ['Javascript', 'React'] == person['skills']:\n",
+    "        print('Front End Developer')\n",
+    "    elif ['Node', 'MongoDB', 'React'] == person['skills']:\n",
+    "        print('Full Stack Developer')\n",
+    "    else:\n",
+    "        print(\"Unknown Title\")\n",
+    "\n",
+    "if person['is_married']:\n",
+    "    print(person['first_name'], person['last_name'], \"lives in\", person['country'], \". S/he is married\")\n",
+    "else:\n",
+    "    print(person['first_name'], person['last_name'], \"lives in\", person['country'], \". S/he is not married\")"
+   ]
   }
  ],
  "metadata": {
