Solutions to exercises

--- a/Day019_FileHandling.ipynb
+++ b/Day019_FileHandling.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,26 @@
     "import json\n",
     "import csv\n",
     "import sys  \n",
-    "sys.path.append(\"data\") \n",
-    "\n",
+    "sys.path.append(\"data\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of lines and words in the file are 30 and 1241 respectively\n",
+      "The number of lines and words in the file are 14 and 471 respectively\n",
+      "The number of lines and words in the file are 188 and 1141 respectively\n",
+      "The number of lines and words in the file are 41 and 1778 respectively\n"
+     ]
+    }
+   ],
+   "source": [
     "def count_words_lines(file):\n",
     "    with open(file) as f:\n",
     "        lines = f.readlines()\n",
@@ -44,10 +62,10 @@
     "            line = re.sub(r'[^\\w\\s]','',line)\n",
     "            words.extend(line.split())\n",
     "    print(f'The number of lines and words in the file are {len(lines)} and {len(words)} respectively')\n",
-    "count_words_lines('C:\\Users\\RIDIKKO\\Arewads\\melania_trump_speech.txt')\n",
-    "count_words_lines('C:\\Users\\RIDIKKO\\Arewads\\donald_speech.txt')\n",
-    "count_words_lines('C:\\Users\\RIDIKKO\\Arewads\\michelle_obama_speech.txt')\n",
-    "count_words_lines('C:\\Users\\RIDIKKO\\Arewads\\obama_speech.txt')"
+    "count_words_lines('C:\\\\Users\\\\R I DIKKO\\\\Arewads\\\\TafawaBalewa_IndependenceSpeech.txt')\n",
+    "count_words_lines('C:\\\\Users\\\\R I DIKKO\\\\Arewads\\\\Sardauna_Speeches.txt')\n",
+    "count_words_lines('C:\\\\Users\\\\R I DIKKO\\\\Arewads\\\\MurtalaMuhammad_Speech.txt')\n",
+    "count_words_lines('C:\\\\Users\\\\R I DIKKO\\\\Arewads\\\\MallamAminuKano.txt')"
    ]
   },
   {
