--- a/Day008_Dictionaries.ipynb
+++ b/Day008_Dictionaries.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question 1: Create an empty dictionary called Ram"
+    "#### Question 1: Create an empty dictionary called Cock"
    ]
   },
   {
