Solutions to exercises

--- a/Day023_Python_Virtual_Environment.ipynb
+++ b/Day023_Python_Virtual_Environment.ipynb
@@ -7,6 +7,47 @@
    "source": [
     "## DAY 23"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create a project directory with a virtual environment based on the example given."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install virtualenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C:\\Users\\R I DIKKO\\Arewads\\flask_project>python -m venv venv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#For Windows Power Shell:\n",
+    "\n",
+    "C:\\Users\\R I DIKKO\\Arewads\\flask_project> venv\\Scripts\\activate\n",
+    "\n",
+    "#For Windows Git bash:\n",
+    "\n",
+    "C:\\Users\\R I DIKKO\\Arewads\\flask_project> venv\\Scripts\\. activate"
+   ]
   }
  ],
  "metadata": {
