--- a/Day019_FileHandling.ipynb
+++ b/Day019_FileHandling.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -78,20 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'countries_data.json'",
+     "ename": "NameError",
+     "evalue": "name 'json' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m     result \u001b[39m=\u001b[39m [(item[\u001b[39m1\u001b[39m],item[\u001b[39m0\u001b[39m]) \u001b[39mfor\u001b[39;00m item \u001b[39min\u001b[39;00m sorted_lang]\n\u001b[0;32m     13\u001b[0m     \u001b[39mreturn\u001b[39;00m result[:n]\n\u001b[1;32m---> 14\u001b[0m \u001b[39mprint\u001b[39m(most_spoken_languages(\u001b[39m'\u001b[39;49m\u001b[39mcountries_data.json\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m10\u001b[39;49m))\n\u001b[0;32m     15\u001b[0m \u001b[39mprint\u001b[39m(most_spoken_languages(\u001b[39m'\u001b[39m\u001b[39mcountries_data.json\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m3\u001b[39m))\n",
-      "Cell \u001b[1;32mIn[3], line 2\u001b[0m, in \u001b[0;36mmost_spoken_languages\u001b[1;34m(file, n)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmost_spoken_languages\u001b[39m(file,n):\n\u001b[1;32m----> 2\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(file) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m         \u001b[39mlist\u001b[39m \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mloads(f\u001b[39m.\u001b[39mread())\n\u001b[0;32m      4\u001b[0m     \u001b[39m# looping to get dict of languages\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\R I DIKKO\\anaconda3\\envs\\arewads\\lib\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'countries_data.json'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 15\u001b[0m\n\u001b[0;32m     13\u001b[0m     result \u001b[39m=\u001b[39m [(item[\u001b[39m1\u001b[39m],item[\u001b[39m0\u001b[39m]) \u001b[39mfor\u001b[39;00m item \u001b[39min\u001b[39;00m sorted_lang]\n\u001b[0;32m     14\u001b[0m     \u001b[39mreturn\u001b[39;00m result[:n]\n\u001b[1;32m---> 15\u001b[0m \u001b[39mprint\u001b[39m(most_spoken_languages(\u001b[39m'\u001b[39;49m\u001b[39mC:\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mUsers\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mR I DIKKO\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mArewads\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mCountries_data.json\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m10\u001b[39;49m))\n\u001b[0;32m     16\u001b[0m \u001b[39mprint\u001b[39m(most_spoken_languages(\u001b[39m'\u001b[39m\u001b[39mC:\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mUsers\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mR I DIKKO\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mArewads\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mCountries_data.json\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m3\u001b[39m))\n",
+      "Cell \u001b[1;32mIn[9], line 4\u001b[0m, in \u001b[0;36mmost_spoken_languages\u001b[1;34m(file, n)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(file) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m     lines \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mreadlines()\n\u001b[1;32m----> 4\u001b[0m     \u001b[39mlist\u001b[39m \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mloads(f\u001b[39m.\u001b[39mread())\n\u001b[0;32m      5\u001b[0m \u001b[39m# looping to get dict of languages\u001b[39;00m\n\u001b[0;32m      6\u001b[0m languages \u001b[39m=\u001b[39m []\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'json' is not defined"
      ]
     }
    ],
@@ -109,8 +108,8 @@
     "    sorted_lang = sorted(lang.items(), key= lambda x:x[1],reverse=True) \n",
     "    result = [(item[1],item[0]) for item in sorted_lang]\n",
     "    return result[:n]\n",
-    "print(most_spoken_languages('countries_data.json',10))\n",
-    "print(most_spoken_languages('countries_data.json',3))"
+    "print(most_spoken_languages('C:\\\\Users\\\\R I DIKKO\\\\Arewads\\\\Countries_data.json',10))\n",
+    "print(most_spoken_languages('C:\\\\Users\\\\R I DIKKO\\\\Arewads\\\\Countries_data.json',3))"
    ]
   },
   {
@@ -123,9 +122,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'countries_data.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m     final_list \u001b[39m=\u001b[39m [{\u001b[39m'\u001b[39m\u001b[39mcountry\u001b[39m\u001b[39m'\u001b[39m:item[\u001b[39m0\u001b[39m],\u001b[39m'\u001b[39m\u001b[39mpopulation\u001b[39m\u001b[39m'\u001b[39m:item[\u001b[39m1\u001b[39m]} \u001b[39mfor\u001b[39;00m item \u001b[39min\u001b[39;00m sorted_lt]\n\u001b[0;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m final_list[:n]\n\u001b[1;32m---> 13\u001b[0m most_populated_countries(\u001b[39m'\u001b[39;49m\u001b[39mcountries_data.json\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m10\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[10], line 2\u001b[0m, in \u001b[0;36mmost_populated_countries\u001b[1;34m(filename, n)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmost_populated_countries\u001b[39m(filename,n):\n\u001b[1;32m----> 2\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(filename) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m         dic_list \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mloads(f\u001b[39m.\u001b[39mread())\n\u001b[0;32m      4\u001b[0m     population \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m()\n",
+      "File \u001b[1;32mc:\\Users\\R I DIKKO\\anaconda3\\envs\\arewads\\lib\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'countries_data.json'"
+     ]
+    }
+   ],
    "source": [
     "def most_populated_countries(filename,n):\n",
     "    with open(filename) as f:\n",
@@ -139,7 +152,7 @@
     "    final_list = [{'country':item[0],'population':item[1]} for item in sorted_lt]\n",
     "    return final_list[:n]\n",
     "\n",
-    "most_populated_countries('countries_data.json',10)"
+    "most_populated_countries('Countries_data.json',10)"
    ]
   },
   {
