--- a/Day019_FileHandling.ipynb
+++ b/Day019_FileHandling.ipynb
@@ -78,22 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'json' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 15\u001b[0m\n\u001b[0;32m     13\u001b[0m     result \u001b[39m=\u001b[39m [(item[\u001b[39m1\u001b[39m],item[\u001b[39m0\u001b[39m]) \u001b[39mfor\u001b[39;00m item \u001b[39min\u001b[39;00m sorted_lang]\n\u001b[0;32m     14\u001b[0m     \u001b[39mreturn\u001b[39;00m result[:n]\n\u001b[1;32m---> 15\u001b[0m \u001b[39mprint\u001b[39m(most_spoken_languages(\u001b[39m'\u001b[39;49m\u001b[39mC:\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mUsers\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mR I DIKKO\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mArewads\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mCountries_data.json\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m10\u001b[39;49m))\n\u001b[0;32m     16\u001b[0m \u001b[39mprint\u001b[39m(most_spoken_languages(\u001b[39m'\u001b[39m\u001b[39mC:\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mUsers\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mR I DIKKO\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mArewads\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mCountries_data.json\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m3\u001b[39m))\n",
-      "Cell \u001b[1;32mIn[9], line 4\u001b[0m, in \u001b[0;36mmost_spoken_languages\u001b[1;34m(file, n)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(file) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m     lines \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mreadlines()\n\u001b[1;32m----> 4\u001b[0m     \u001b[39mlist\u001b[39m \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mloads(f\u001b[39m.\u001b[39mread())\n\u001b[0;32m      5\u001b[0m \u001b[39m# looping to get dict of languages\u001b[39;00m\n\u001b[0;32m      6\u001b[0m languages \u001b[39m=\u001b[39m []\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'json' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def most_spoken_languages(file,n):\n",
     "    with open(file) as f:\n",
@@ -122,23 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'countries_data.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m     final_list \u001b[39m=\u001b[39m [{\u001b[39m'\u001b[39m\u001b[39mcountry\u001b[39m\u001b[39m'\u001b[39m:item[\u001b[39m0\u001b[39m],\u001b[39m'\u001b[39m\u001b[39mpopulation\u001b[39m\u001b[39m'\u001b[39m:item[\u001b[39m1\u001b[39m]} \u001b[39mfor\u001b[39;00m item \u001b[39min\u001b[39;00m sorted_lt]\n\u001b[0;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m final_list[:n]\n\u001b[1;32m---> 13\u001b[0m most_populated_countries(\u001b[39m'\u001b[39;49m\u001b[39mcountries_data.json\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m10\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn[10], line 2\u001b[0m, in \u001b[0;36mmost_populated_countries\u001b[1;34m(filename, n)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmost_populated_countries\u001b[39m(filename,n):\n\u001b[1;32m----> 2\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(filename) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m         dic_list \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mloads(f\u001b[39m.\u001b[39mread())\n\u001b[0;32m      4\u001b[0m     population \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m()\n",
-      "File \u001b[1;32mc:\\Users\\R I DIKKO\\anaconda3\\envs\\arewads\\lib\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'countries_data.json'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def most_populated_countries(filename,n):\n",
     "    with open(filename) as f:\n",
@@ -216,10 +189,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Obama: ',find_most_common_words('obama_speech.txt')) \n",
-    "print('Michelle Obama: ',find_most_common_words('michelle_obama_speech.txt'))\n",
-    "print('Donald Trump: ',find_most_common_words('donald_speech.txt'))\n",
-    "print('Melania Trump: ',find_most_common_words('melania_trump_speech.txt'))"
+    "print('Sardauna: ',find_most_common_words('Sardauna_Speeches.txt')) \n",
+    "print('Tafawa Balewa: ',find_most_common_words('TafawaBalewa_IndependenceSpeech.txt'))\n",
+    "print('Aminu Kano: ',find_most_common_words('MallamAminuKano.txt'))\n",
+    "print('Murtala Muhammad: ',find_most_common_words('MurtalaMuhammad_Speech.txt'))"
    ]
   },
   {
